Renaming, Differential fix

--- a/DeepSpace.yaml
+++ b/DeepSpace.yaml
@@ -171,4 +171,4 @@ Properties:
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
     name: Autonomous Command, type: Command, validators: null, value: Autonomous Command}
 Base: Robot
-Name: Dave011519
+Name: DeepSpace
