--- a/DeepSpace.yaml
+++ b/DeepSpace.yaml
@@ -380,10 +380,10 @@ Properties:
     name: Export Subsystems, validators: null, value: true}
   Simulation World File: !!robotbuilder.data.properties.StringProperty {default: /usr/share/frcsim/worlds/GearsBotDemo.world,
     name: Simulation World File, validators: null, value: /usr/share/frcsim/worlds/GearsBotDemo.world}
-  Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\nhsro\',
+  Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\Owner\',
     extension: null, folder: true, name: Wiring file location, validators: null, value: 'C:\Users\nhsro\'}
-  Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\nhsro\FRCProjects',
-    extension: null, folder: true, name: Export Directory, validators: null, value: 'C:\Users\nhsro\FRCProjects'}
+  Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\Owner\FRCProjects',
+    extension: null, folder: true, name: Export Directory, validators: null, value: 'C:\Users\Owner\Documents\GitHub\4097-deep-space'}
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
     name: Autonomous Command, type: Command, validators: null, value: Autonomous Command}
 Base: Robot
