--- a/DeepSpace/.vscode/settings.json
+++ b/DeepSpace/.vscode/settings.json
@@ -8,7 +8,7 @@
     "**/.DS_Store": true,
     "bin/": true,
     ".classpath": true,
-    ".project": true
-  },
-  "wpilib.online": true
+    ".project": true,
+    "**/*~": true
+  }
 }
